--- a/main.html
+++ b/main.html
@@ -10,7 +10,17 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+	<h1 id="verification_heading">Verify Your Account</h1>
+	<h2 id="verification_subtext"></h2>
+	<div class="code-container">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
+		
+	</div>
 </body>
 
 </html>
