--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
 	<h1 id="verification_heading">Verify Your Account</h1>
 	<h2 id="verification_subtext"></h2>
 	<div class="code-container">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		<input type="tel" maxlength="1" inputmode="numeric" placeholder=0 pattern="[0-9]*">
-		
-	</div>
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+</div>
+
 </body>
 
 </html>
