--- a/main.html
+++ b/main.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>OTP Verification</title>
+  <link rel="stylesheet" href="styles.css" />
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-	<h1 id="verification_heading">Verify Your Account</h1>
-	<h2 id="verification_subtext"></h2>
-	<div class="code-container">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-	  <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
-</div>
+  <h1 id="verification_heading">Verify Your Account</h1>
+  <h2 id="verification_subtext">Please enter the 6-digit code sent to your mobile number.</h2>
 
+  <div class="code-container">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+    <input class="code" type="tel" maxlength="1" inputmode="numeric" placeholder="0" pattern="[0-9]*">
+  </div>
+
+  <script src="script.js"></script>
 </body>
-
 </html>
